[project]
name = "lubber"
version = "0.1.0"
description = "Command line tool for building sm64coopdx mods"
authors = [
    {name = "jayden",email = "46307433+kermeow@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "tomlkit (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
